--- a/graphs-visualizer/package.json
+++ b/graphs-visualizer/package.json
@@ -10,6 +10,7 @@
     },
     "devDependencies": {
         "autoprefixer": "^10.4.0",
+        "cssnano": "^6.0.1",
         "parcel": "^2.0.1",
         "postcss": "^8.3.11",
         "postcss-import": "^14.0.2",
